--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
         "@inertiajs/vue3": "^2.0.0-beta.3",
+        "@tanstack/vue-table": "^8.21.2",
         "@vee-validate/zod": "^4.15.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueup/vue-quill": "^1.2.0",
@@ -43,7 +44,7 @@
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.2.2",
         "vee-validate": "^4.15.0",
-        "vite": "^6.2.0",
+        "vite": "^5.1.4",
         "vue": "^3.5.13",
         "ziggy-js": "^2.4.2",
         "zod": "^3.24.2"
